--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.1"
   },
