--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.25.3",
-    "sequelize-cli": "^6.5.1"
+    "sequelize-cli": "^6.5.2"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "start:dev": "nodemon src/app.js"
   }
 }
